--- a/template-sections.html
+++ b/template-sections.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -123,7 +123,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                 <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -242,7 +242,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -439,7 +439,7 @@
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -552,21 +552,23 @@
                 <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
 
-                <form method="POST" action="" id="ebook-form">
+                <form method="POST" action="" id="ebook-form" class="kk-validation">
                     <div class="form-content">
-                        <label for="name">
+                        <div class="form-group">
+                            <label class="sr-only d-none" for="name">Full Name:</label>
                             <span class='icon icon-name'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-username.png" alt="Icon User"></span>
-                            <input type="text" class="name" name="name" id="name" placeholder="Name" required>
-                        </label>
-                        <label for="email">
+                            <input type="text" class="name" name="name" id="name" placeholder="Name" required />
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only d-none" for="email">Email Address:</label>
                             <span class='icon icon-email'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-email.png" alt="Icon Email"></span>
-                            <input type="email" class="email" id="email" name="email" placeholder="Email" required>
-                        </label>
+                            <input type="email" class="email" id="email" name="email" placeholder="Email" required />
+                        </div>
                         <div class="btn-section">
                             <input type="submit" class="btn btn-primary" value="Get My Free Ebook">
                         </div>
                     </div>
-                    <div class="form-messages"></div>
+                    <div class="form-messages text-center" data-success="Success! Your eBook is being sent to your inbox!"></div>
                 </form>
 
             </div>
@@ -588,21 +590,23 @@
                 <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
 
-                <form method="POST" action="" id="ebook-form">
+                <form method="POST" action="" id="ebook-form" class="kk-validation">
                     <div class="form-content">
-                        <label for="name">
+                        <div class="form-group">
+                            <label class="sr-only d-none" for="name">Full Name:</label>
                             <span class='icon icon-name'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-username.png" alt="Icon User"></span>
-                            <input type="text" class="name" name="name" id="name" placeholder="Name" required>
-                        </label>
-                        <label for="email">
+                            <input type="text" class="name" name="name" id="name" placeholder="Name" required />
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only d-none" for="email">Email Address:</label>
                             <span class='icon icon-email'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-email.png" alt="Icon Email"></span>
-                            <input type="email" class="email" id="email" name="email" placeholder="Email" required>
-                        </label>
+                            <input type="email" class="email" id="email" name="email" placeholder="Email" required />
+                        </div>
                         <div class="btn-section">
-                            <input type="submit" class="btn btn-primary" value="Get My Free Ebook"></input>
+                            <input type="submit" class="btn btn-primary" value="Get My Free Ebook">
                         </div>
                     </div>
-                    <div class="form-messages"></div>
+                    <div class="form-messages text-center" data-success="Success! Your eBook is being sent to your inbox!"></div>
                 </form>
             </div>
         </div>
@@ -757,33 +761,36 @@
                 <p>PLEASE NOTE: The bonus Orangetheory Starter Packs are only available for a limited time and only while stocks last. Enter your details below now to ensure you don't miss out on this offer.</p>
 
                 <div class="single-column__form">
-                    <form method="POST" action="" class="d-flex flex-column" id="claim-your-free-consultation">
-
-                        <input type="hidden" name="something" value="Lead Form" data-kk-label="Lead Source" />
-                        <input type="hidden" name="planet" value="" />
+                    <form method="POST" action="" id="offer-form" class="kk-validation">
 
                         <div class="form-content">
-                            <label for="name">
-                                <span class="icon icon-name"><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-username.png" alt="Icon User"></span>
-                                <input type="text" class="name" name="name" id="name" placeholder="Full Name*" data-kk-label="Full Name" required/>
-                            </label>
-                            <label for="email">
-                                <span class="icon icon-email"><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-email.png" alt="Icon Email"></span>
-                                <input type="email" class="email" id="email" name="email" placeholder="Email Address*" data-kk-label="Email Address" required>
-                            </label>
-                            <label for="phone">
+                            <div class="form-group">
+                                <label class="sr-only d-none" for="name">Full Name:</label>
+                                <span class='icon icon-name'><img class="img-fluid view-animation lazyload" data-sizes="auto"
+                                        data-original-src="assets/prod/images/icon-username.png" alt="Icon User"></span>
+                                <input type="text" class="name" name="name" id="name" placeholder="Name" required />
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only d-none" for="email">Email Address:</label>
+                                <span class='icon icon-email'><img class="img-fluid view-animation lazyload" data-sizes="auto"
+                                        data-original-src="assets/prod/images/icon-email.png" alt="Icon Email"></span>
+                                <input type="email" class="email" id="email" name="email" placeholder="Email" required />
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only d-none" for="phone">Phone Number:</label>
                                 <span class="icon icon-phone"><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-phone.png" alt="Icon Phone"></span>
-                                <input type="text" class="phone" id="phone" name="phone" placeholder="Phone Number*" data-kk-label="Phone Number" required>
-                            </label>
-                            <label for="message">
+                                <input type="text" class="phone" id="phone" name="phone" placeholder="Phone Number*" required />
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only d-none" for="message">Message:</label>
                                 <span class="icon icon-message"><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-message.png" alt="Icon Message"></span>
-                                <textarea class="message" id="message" name="message" placeholder="Have questions?" data-kk-label="Have questions?" ></textarea>
-                            </label>
+                                <textarea class="message" id="message" name="message" placeholder="Have questions?" ></textarea>
+                            </div>
                             <div class="btn-section">
                                 <input type="submit" class="btn btn-primary" value="Try us free for 7-days"/>
                             </div>
                         </div>
-                        <div class="form-messages"></div>
+                        <div class="form-messages text-center"></div>
                     </form>
                 </div>
             </div>
@@ -906,11 +913,11 @@
                         <div class="variation-type-label mb-0"><h4 class="mb-2">Warranty</h4></div>
                         <div class="options-container">
                             <div class="options radio-options">
-                                <label for="Standard 2 Years" class="option radio-option-container active" data-value="Standard 2 Years">
+                                <label class="sr-only d-none" for="Standard 2 Years" class="option radio-option-container active" data-value="Standard 2 Years">
                                     <input type="radio" id="Standard 2 Years" name="warranty-type" value="Standard 2 Years" checked="">
                                     Standard 2 Years
                                 </label>
-                                <label for="Essentia Care Pack" class="option radio-option-container" data-value="Essentia Care Pack">
+                                <label class="sr-only d-none" for="Essentia Care Pack" class="option radio-option-container" data-value="Essentia Care Pack">
                                     <input type="radio" id="Essentia Care Pack" name="warranty-type" value="Essentia Care Pack">
                                     Essentia Care Pack - <span class="warranty-popup-trigger">Learn More</span>
                                 </label>
@@ -1050,21 +1057,23 @@
                     </ol>
 
                     <div class="form-container">
-                        <form method="POST" action="">
+                        <form method="POST" action="" id="popup-form" class="kk-validation">
                             <div class="form-content">
-                                <label for="name-m">
+                                <div class="form-group">
+                                    <label class="sr-only d-none" for="name-m">Full Name:</label>
                                     <span class='icon icon-name'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-username.png" alt="Icon User"></span>
-                                    <input type="text" class="name" name="name" id="name-m" placeholder="Name" required>
-                                </label>
-                                <label for="email-m">
+                                    <input type="text" class="name" name="name" id="name-m" placeholder="Name" required />
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only d-none" for="email-m">Email Address:</div>
                                     <span class='icon icon-email'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="assets/prod/images/icon-email.png" alt="Icon Email"></span>
-                                    <input type="email" class="email" id="email-m" name="email" placeholder="Email" required>
+                                    <input type="email" class="email" id="email-m" name="email" placeholder="Email" required />
                                 </label>
                                 <div class="btn-section">
                                     <input type="submit" class="btn btn-primary" value="Submit">
                                 </div>
                             </div>
-                            <div class="form-messages"></div>
+                            <div class="form-messages text-center"></div>
                         </form>
                     </div>
                 </div>
