--- a/template-sections.html
+++ b/template-sections.html
@@ -447,6 +447,83 @@
     </div>
 </section>
 
+<section class="hero-centered pt-0 extended-gallery">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 text-center">
+                <h2>This is image gallery</h2>
+            </div>
+        </div>
+        <div class="swiper-container extended-gallery mobile mb-5">
+            <div class="swiper-wrapper d-lg-flex flex-lg-wrap mb-4 justify-content-lg-center">
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+                <div class="swiper-slide col-lg-4 p-4 text-center extra-slide">
+                    <img class="lazyload max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png">
+                </div>
+            </div>
+            <div class="swiper-pagination d-lg-none"></div>
+        </div>
+        
+        <div class="row justify-content-center d-none d-lg-flex">
+            <div class="col-sm-8 col-md-6 col-md-5 col-xl-4 px-xl-5">
+                <div class="btn-section text-center">
+                    <a href="javascript:void(0);" class="btn btn-primary load-more-gallery"> load more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!--Featured In Band Section - Logo Row w/ Mobile Slider -->
 <section class="featured-in bg-light less-pad">
     <div class="container-fluid">
