font & svg references to match svg update

--- a/free-ebook/index.html
+++ b/free-ebook/index.html
@@ -22,7 +22,7 @@
             </div>
             <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
                 <div class="phone-icon mr-md-2">
-                    <img class="view-animation img-fluid" src="../assets/svgs/icon-phone.svg" alt="Icon Phone">
+                    <img class="view-animation img-fluid" src="../assets/prod/svgs/icon-phone.svg" alt="Icon Phone">
                 </div>
                 <div class="phone-text d-none d-md-flex flex-column">
                     <span>Got Questions?</span>
@@ -116,23 +116,23 @@
 
                 <ul class="styled-list">
                     <li class="d-flex align-items-start mb-5">
-                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/prod/svgs/icon-check.svg" alt="Icon check">
                         <p class="mb-0"> <strong>Free Consultation With A Certified Orangetheory Coach:</strong> Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p>
                     </li>
                     <li class="d-flex align-items-start mb-5">
-                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/prod/svgs/icon-check.svg" alt="Icon check">
                         <p class="mb-0"> <strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p>
                     </li>
                     <li class="d-flex align-items-start mb-5">
-                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/prod/svgs/icon-check.svg" alt="Icon check">
                         <p class="mb-0"> <strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p>
                     </li>
                     <li class="d-flex align-items-start mb-5">
-                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/prod/svgs/icon-check.svg" alt="Icon check">
                         <p class="mb-0"> <strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p>
                     </li>
                     <li class="d-flex align-items-start mb-5">
-                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/prod/svgs/icon-check.svg" alt="Icon check">
                         <p class="mb-0"> <strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p>
                     </li>
                 </ul>
