--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -22,7 +22,7 @@
             </div>
             <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
                 <div class="phone-icon mr-md-2">
-                    <img class="view-animation img-fluid" src="../assets/svgs/icon-phone.svg" alt="Icon Phone">
+                    <img class="view-animation img-fluid" src="../assets/prod/svgs/icon-phone.svg" alt="Icon Phone">
                 </div>
                 <div class="phone-text d-none d-md-flex flex-column">
                     <span>Got Questions?</span>
