--- a/free-ebook/index.html
+++ b/free-ebook/index.html
@@ -18,7 +18,11 @@
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <div class="header-logo">
-                <img class="lazyload view-animation img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/logo.png" alt="NAME OF COMPANY">
+                <picture>
+                    <source srcset="../assets/prod/images/logo-cover.webp" type="image/webp">
+                    <source srcset="../assets/prod/images/logo.png" type="image/png"> 
+                    <img class="" src="../assets/prod/images/logo-cover.webp" alt="NAME OF COMPANY">
+                </picture>
             </div>
             <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
                 <div class="phone-icon mr-md-2">
@@ -45,12 +49,12 @@
                         <div class="form-content">
                             <div class="form-group">
                                 <label class="sr-only d-none" for="name">Full Name:</label>
-                                <span class='icon icon-name'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="../assets/prod/images/icon-username.png" alt="Icon User"></span>
+                                <span class='icon icon-name'><img class="img-fluid view-animation" data-original-src="../assets/prod/images/icon-username.png" alt="Icon User"></span>
                                 <input type="text" class="name" name="name" id="name" placeholder="Name" required />
                             </div>
                             <div class="form-group">
                                 <label class="sr-only d-none" for="email">Email Address:</label>
-                                <span class='icon icon-email'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="../assets/prod/images/icon-email.png" alt="Icon Email"></span>
+                                <span class='icon icon-email'><img class="img-fluid view-animation" data-original-src="../assets/prod/images/icon-email.png" alt="Icon Email"></span>
                                 <input type="email" class="email" id="email" name="email" placeholder="Email" required />
                             </div>
                             <div class="btn-section">
@@ -64,7 +68,7 @@
             <div class="col-md-10 col-lg-5 text-center order-first order-lg-last">
                 <p class="eyebrow d-lg-none"> shocking free report reveals </p>
                 <h1 class="d-lg-none"> Nice And Big Super Sexy And Compelling Headline </h1>
-                <img class="lazyload view-animation fade-left book-cover max-width-image mb-5 mb-lg-0" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                <img class="view-animation fade-left book-cover max-width-image mb-5 mb-lg-0" data-original-src="../assets/prod/images/placeholder.png">
             </div>
         </div>
     </div>
@@ -80,22 +84,22 @@
             <div class="col-xl-10">
                 <div class="row slider align-items-center justify-content-center">
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                        <img class="img-fluid" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                        <img class="img-fluid" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                        <img class="img-fluid" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                        <img class="img-fluid" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                        <img class="img-fluid" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                        <img class="img-fluid" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                 </div>
             </div>
@@ -151,7 +155,7 @@
 <!-- Testmionials Section -->
 <section class="testimonials text-center text-light">
     <div class="background-image-container">
-        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+        <img data-original-src="../assets/prod/images/placeholder.png">
     </div>
     <div class="container">
         <div class="row justify-content-center">
