--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <div class="header-logo">
-                <img class="lazyload view-animation img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/logo.png" alt="NAME OF COMPANY">
+                <picture>
+                    <source srcset="./assets/prod/images/logo-cover.webp" type="image/webp">
+                    <source srcset="./assets/prod/images/logo.png" type="image/png"> 
+                    <img class="" src="./assets/prod/images/logo-cover.webp" alt="NAME OF COMPANY">
+                </picture>
             </div>
             <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
                 <div class="phone-icon mr-md-2">
@@ -40,7 +44,11 @@
 <!-- Hero - Centered Content -->
 <section class="hero-centered text-center">
     <div class="background-image-container semi-transparent-bg-light">
-        <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+        <picture>
+            <source srcset="../assets/prod/images/placeholder-cover.webp" type="image/webp"/>
+            <source srcset="../assets/prod/images/placeholder-cover.png" type="image/png"/> 
+            <img src="../assets/prod/images/placeholder-cover.webp" alt=""/>
+        </picture>
     </div>
     <div class="container">
         <div class="row justify-content-center">
