--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -19,7 +19,11 @@
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <div class="header-logo">
-                <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/logo.png" alt="NAME OF COMPANY">
+                <picture>
+                    <source srcset="../assets/prod/images/logo-cover.webp" type="image/webp">
+                    <source srcset="../assets/prod/images/logo.png" type="image/png"> 
+                    <img class="" src="../assets/prod/images/logo-cover.webp" alt="NAME OF COMPANY">
+                </picture>
             </div>
             <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
                 <div class="phone-icon mr-md-2">
@@ -36,7 +40,7 @@
 
 <section id="hero" class="hero-centered d-flex justify-content-center align-items-center">
     <div class="background-image-container semi-transparent-bg-light">
-        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+        <img class="" data-original-src="../assets/prod/images/placeholder.png">
     </div>
     <div class="container">
         <div class="row justify-content-center text-center">
