--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -45,8 +45,8 @@
     <div class="container">
         <div class="row justify-content-center text-center">
             <div class="col-md-8 col-lg-6">
-                <h1>Thanks For Filling Out The Form!</h1>
-                <p class="subheadline mb-4"> We have got your details and we will be in touch with you shortly. </p>
+                <h1>Thanks for contacting us!</h1>
+                <p class="subheadline mb-4">We have your details and will be in touch with you shortly. </p>
                 <a href="/" class="btn btn-primary">Return To Home</a>
             </div>
         </div>
