removed second H1 from ebook page

--- a/free-ebook/index.html
+++ b/free-ebook/index.html
@@ -41,8 +41,11 @@
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-10 col-lg-7 order-last order-lg-first">
-                <p class="eyebrow d-none d-lg-block"> shocking free report reveals </p>
-                <h1 class="d-none d-lg-block"> Nice And Big Super Sexy And Compelling Headline </h1>
+                <p class="eyebrow"> shocking free report reveals </p>
+                <h1> Nice And Big Super Sexy And Compelling Headline </h1>
+
+                <img class="view-animation fade-left book-cover max-width-image mx-auto mb-5 d-block d-lg-none" data-original-src="../assets/prod/images/placeholder.png">
+                
                 <p class="subheadline"> Super compelling and punchy sub headline that is generally slightly lighter in colorthan the headline but not so much. </p>
                 <div class="form-container">
                     <form method="POST" action="" id="ebook-form" class="kk-validation">
@@ -65,9 +68,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-md-10 col-lg-5 text-center order-first order-lg-last">
-                <p class="eyebrow d-lg-none"> shocking free report reveals </p>
-                <h1 class="d-lg-none"> Nice And Big Super Sexy And Compelling Headline </h1>
+            <div class="col-md-10 col-lg-5 text-center order-first order-lg-last d-none d-lg-block">
                 <img class="view-animation fade-left book-cover max-width-image mb-5 mb-lg-0" data-original-src="../assets/prod/images/placeholder.png">
             </div>
         </div>
